theme dev update - footer and partner logo

--- a/dev/scss/inc/_footer.scss
+++ b/dev/scss/inc/_footer.scss
@@ -1,6 +1,17 @@
 .partner {
 	background: #ddd;
-	padding: 40px 0;
+	padding: 30px 0;
+	text-align: center;
+
+	&__logo {
+		display: inline-block;
+		padding: 10px 20px;
+		vertical-align: middle;
+
+		img {
+			display: block;
+		}
+	}
 }
 
 
@@ -13,4 +24,149 @@
 	background-size: 328px 328px;
 	color: $color-footer-text;
 	font-size: 14px;
+
+	a {
+		color: #a6a6a6;
+		text-decoration: none;
+
+		&:hover {
+			color: $color-red;
+		}
+	}
+
+	h5 {
+		font-size: 16px;
+		color: #fff;
+
+		&::before {
+			position: relative;
+			background: url(../img/footer-header-arrow.svg) no-repeat;
+			width: 13px;
+			height: 9px;
+			content: '';
+			display: inline-block;
+			margin-right: 5px;
+			vertical-align: 2px;
+		}
+	}
+
+	.widget_nav_menu {
+		ul {
+			padding-left: 0;
+			list-style: none;
+			margin: 0;
+
+			li:not(:last-child) {
+				margin-bottom: 10px;
+			}
+		}
+	}
+}
+
+
+// FOOTER TOP
+.footer-top {
+	padding: 80px 0;
+
+	.grid-footer-top {
+		margin-bottom: 30px;
+
+		@media (min-width: $mobile) {
+			width: 50%;
+
+		}
+		@media (min-width: $tablet) {
+			width: 25%;
+			margin-bottom: 0;
+		}
+
+		@media (max-width: $mobile - 1) {
+			float: none;
+
+		}
+	}
+}
+
+// address
+.vcard {
+	.company-name {
+		font-family: $font-bold;
+		margin-bottom: 5px;
+		font-size: 16px;
+		color: #fff;
+
+		small {
+			font-family: $font;
+			display: block;
+			color: $color-footer-text;
+			font-size: 10px;
+			opacity: .75
+		}
+	}
+
+	ul {
+		list-style: none;
+		padding-left: 0;
+
+		li {
+			margin-bottom: 10px;
+		}
+
+		a {
+			color: $color-red;
+
+			&:hover {
+				color: lighten($color-red, 8);
+			}
+		}
+	}
+
+	.icon {
+		display: inline-block;
+		background: url(../img/footer-contact-icon.svg) no-repeat;
+		width: 16px;
+		height: 18px;
+		vertical-align: -4px;
+		margin-right: 5px;
+
+		&-footer__tel {background-position: right}
+	}
+}
+
+
+
+// FOOTER BOTTOM
+
+.footer-bottom {
+	padding: 20px 0;
+	font-size: 13px;
+	line-height: 30px;
+	color: darken($color-footer-text, 10);
+	background: rgba(#000, .25);
+}
+
+.grid-footer-bottom {
+	@media (max-width: $mobile - 1) {
+		float: none;
+		text-align: center;
+	}
+
+	@media (min-width: $mobile) {
+		&--logo {
+			width: 25%;
+
+			img {
+				display: block;
+
+			}
+		}
+		&--copyright {
+			width: 75%;
+			text-align: right;
+			line-height: 38px;
+		}
+	}
+}
+.copyright {
+	text-align: right;
 }
