--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,22 @@ body {
   font: 16px/1.5 "nexa_regularregular", "Helvetica Neue", Arial, sans-serif;
   color: #4a4a4a; }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+  font-family: "nexa_heavyregular", "Helvetica Neue", Arial, sans-serif; }
+
+h1, h2, h3, h4, h5, h6, p, ul, ol, dl, table {
+  margin: 0 0 15px; }
+
+a {
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  transition: all 0.1s; }
+
+img {
+  max-width: 100%;
+  height: auto; }
+
 .container {
   max-width: 1200px;
   padding: 0 10px;
@@ -168,7 +184,7 @@ body {
   position: relative; }
 
 .row {
-  margin: -10px; }
+  margin: 0 -10px; }
   .row::after {
     clear: both;
     content: "";
@@ -181,20 +197,29 @@ body {
 .grid {
   width: 100%; }
 
-.grid-1-4 {
+.grid-1-12 {
+  width: 8.3333333333%; }
+
+.grid-2-12 {
+  width: 16.6666666667%; }
+
+.grid-3-12 {
   width: 25%; }
 
-.grid-1-2 {
-  width: 50%; }
-
-.grid-3-4 {
-  width: 75%; }
-
-.grid-1-3 {
+.grid-4-12 {
   width: 33.3333333333%; }
 
-.grid-2-3 {
+.grid-6-12 {
+  width: 50%; }
+
+.grid-8-12 {
   width: 66.6666666667%; }
+
+.grid-9-12 {
+  width: 75%; }
+
+.grid-10-12 {
+  width: 83.3333333333%; }
 
 .header {
   background: #fff;
@@ -202,10 +227,109 @@ body {
 
 .partner {
   background: #ddd;
-  padding: 40px 0; }
+  padding: 30px 0;
+  text-align: center; }
+  .partner__logo {
+    display: inline-block;
+    padding: 10px 20px;
+    vertical-align: middle; }
+    .partner__logo img {
+      display: block; }
 
 .footer {
   background: #2a2a2a url(../img/footer-bg.png) no-repeat right bottom;
   background-size: 328px 328px;
   color: #888;
   font-size: 14px; }
+  .footer a {
+    color: #a6a6a6;
+    text-decoration: none; }
+    .footer a:hover {
+      color: #e22727; }
+  .footer h5 {
+    font-size: 16px;
+    color: #fff; }
+    .footer h5::before {
+      position: relative;
+      background: url(../img/footer-header-arrow.svg) no-repeat;
+      width: 13px;
+      height: 9px;
+      content: '';
+      display: inline-block;
+      margin-right: 5px;
+      vertical-align: 2px; }
+  .footer .widget_nav_menu ul {
+    padding-left: 0;
+    list-style: none;
+    margin: 0; }
+    .footer .widget_nav_menu ul li:not(:last-child) {
+      margin-bottom: 10px; }
+
+.footer-top {
+  padding: 80px 0; }
+  .footer-top .grid-footer-top {
+    margin-bottom: 30px; }
+    @media (min-width: 480px) {
+      .footer-top .grid-footer-top {
+        width: 50%; } }
+    @media (min-width: 768px) {
+      .footer-top .grid-footer-top {
+        width: 25%;
+        margin-bottom: 0; } }
+    @media (max-width: 479px) {
+      .footer-top .grid-footer-top {
+        float: none; } }
+
+.vcard .company-name {
+  font-family: "nexa_heavyregular", "Helvetica Neue", Arial, sans-serif;
+  margin-bottom: 5px;
+  font-size: 16px;
+  color: #fff; }
+  .vcard .company-name small {
+    font-family: "nexa_regularregular", "Helvetica Neue", Arial, sans-serif;
+    display: block;
+    color: #888;
+    font-size: 10px;
+    opacity: 0.75; }
+.vcard ul {
+  list-style: none;
+  padding-left: 0; }
+  .vcard ul li {
+    margin-bottom: 10px; }
+  .vcard ul a {
+    color: #e22727; }
+    .vcard ul a:hover {
+      color: #e74b4b; }
+.vcard .icon {
+  display: inline-block;
+  background: url(../img/footer-contact-icon.svg) no-repeat;
+  width: 16px;
+  height: 18px;
+  vertical-align: -4px;
+  margin-right: 5px; }
+  .vcard .icon-footer__tel {
+    background-position: right; }
+
+.footer-bottom {
+  padding: 20px 0;
+  font-size: 13px;
+  line-height: 30px;
+  color: #6f6f6f;
+  background: rgba(0, 0, 0, 0.25); }
+
+@media (max-width: 479px) {
+  .grid-footer-bottom {
+    float: none;
+    text-align: center; } }
+@media (min-width: 480px) {
+  .grid-footer-bottom--logo {
+    width: 25%; }
+    .grid-footer-bottom--logo img {
+      display: block; }
+  .grid-footer-bottom--copyright {
+    width: 75%;
+    text-align: right;
+    line-height: 38px; } }
+
+.copyright {
+  text-align: right; }
