--- a/dev/scss/inc/_grid.scss
+++ b/dev/scss/inc/_grid.scss
@@ -13,7 +13,7 @@ $column: 12;
 }
 
 .row {
-	margin: 0 -$margin;
+	margin: 0 -10px;
 	@include clearfix;
 }
 
@@ -23,9 +23,18 @@ $column: 12;
 }
 
 .grid {width: 100%}
-.grid-1-4 { width: percentage(1/4); }
-.grid-1-2 { width: percentage(1/2); }
-.grid-3-4 { width: percentage(3/4); }
+.grid-1-12 { width: percentage(1/$column); }
+.grid-2-12 { width: percentage(2/$column); }
+.grid-3-12 { width: percentage(3/$column); }
+.grid-4-12 { width: percentage(4/$column); }
+.grid-6-12 { width: percentage(6/$column); }
+.grid-8-12 { width: percentage(8/$column); }
+.grid-9-12 { width: percentage(9/$column); }
+.grid-10-12 { width: percentage(10/$column); }
 
-.grid-1-3 { width: percentage(1/3); }
-.grid-2-3 { width: percentage(2/3); }
+// @media (max-width: $mobile-max) {
+// 	[class^="grid"] {
+// 		width: auto;
+// 		float: none;
+// 	}
+// }
