--- a/dev/scss/inc/_var.scss
+++ b/dev/scss/inc/_var.scss
@@ -20,3 +20,7 @@ $mobile: 480px;
 $tablet: 768px;
 $desktop: 992px;
 $desktop-lg: 1200px;
+
+$mobile-max: $tablet - 1;
+$tablet-max: $desktop - 1;
+$desktop-max: $desktop-lg - 1;
