--- a/css/style.css
+++ b/css/style.css
@@ -242,8 +242,7 @@ img {
   color: #888;
   font-size: 14px; }
   .footer a {
-    color: #a6a6a6;
-    text-decoration: none; }
+    color: #a6a6a6; }
     .footer a:hover {
       color: #e22727; }
   .footer h5 {
@@ -315,7 +314,7 @@ img {
   font-size: 13px;
   line-height: 30px;
   color: #6f6f6f;
-  background: rgba(0, 0, 0, 0.25); }
+  background: rgba(0, 0, 0, 0.2); }
 
 @media (max-width: 479px) {
   .grid-footer-bottom {
