--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -10,9 +10,11 @@
 // global
 @import "inc/_global";
 @import "inc/_grid";
+@import "inc/_layout";
 
 // import scss partials
 @import "inc/_header";
+@import "inc/_navigation";
 
 
 @import "inc/_footer";
