--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,18 @@ body {
   font: 16px/1.5 "nexa_regularregular", "Helvetica Neue", Arial, sans-serif;
   color: #4a4a4a; }
 
+a {
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  transition: all 0.1s;
+  color: #e22727; }
+  a:hover {
+    color: #e74b4b; }
+
+img {
+  max-width: 100%;
+  height: auto; }
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-family: "nexa_heavyregular", "Helvetica Neue", Arial, sans-serif; }
@@ -168,23 +180,20 @@ h1, h2, h3, h4, h5, h6 {
 h1, h2, h3, h4, h5, h6, p, ul, ol, dl, table {
   margin: 0 0 15px; }
 
-a {
-  -webkit-transition: all 0.1s;
-  -moz-transition: all 0.1s;
-  transition: all 0.1s; }
+h1 {
+  font-size: 40px; }
 
-img {
-  max-width: 100%;
-  height: auto; }
+h2 {
+  font-size: 27px; }
 
 .container {
   max-width: 1200px;
-  padding: 0 10px;
+  padding: 0 15px;
   margin: 0 auto;
   position: relative; }
 
 .row {
-  margin: 0 -10px; }
+  margin: 0 -15px; }
   .row::after {
     clear: both;
     content: "";
@@ -192,7 +201,7 @@ img {
 
 [class^="grid"] {
   float: left;
-  padding: 0 10px; }
+  padding: 0 15px; }
 
 .grid {
   width: 100%; }
@@ -221,24 +230,36 @@ img {
 .grid-10-12 {
   width: 83.3333333333%; }
 
-.content::after {
-  clear: both;
-  content: "";
-  display: table; }
+.content {
+  padding: 60px 0 80px; }
+  .content::after {
+    clear: both;
+    content: "";
+    display: table; }
 
 .content__main {
-  padding: 0 10px; }
+  padding: 0 15px; }
   @media (min-width: 768px) {
     .content__main {
       width: 66.6666666667%;
       float: left; } }
 
 .content__side {
-  padding: 0 10px; }
+  padding: 0 15px; }
   @media (min-width: 768px) {
     .content__side {
       width: 33.3333333333%;
       float: left; } }
+
+.section__page-title {
+  background: #fff url(../img/section-page-title-bg.png) right top no-repeat;
+  background-size: 262px 260px;
+  padding: 20px 0 10px; }
+  .section__page-title .page-title {
+    margin-bottom: 0; }
+
+.page-title {
+  color: #e22727; }
 
 .header {
   background: #fff;
@@ -296,6 +317,70 @@ img {
       padding: 10px 20px;
       display: block;
       text-decoration: none; }
+
+.post {
+  background: #fff;
+  box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
+  margin-bottom: 40px; }
+
+.post__header {
+  padding: 30px;
+  padding-bottom: 15px;
+  border-bottom: 1px dashed #ccc; }
+
+.post-title a {
+  color: #2a2a2a;
+  text-decoration: none; }
+  .post-title a:hover {
+    color: #e22727; }
+
+.post-meta {
+  font-size: 14px;
+  color: #888; }
+  .post-meta span {
+    display: inline-block; }
+    .post-meta span:not(:last-child) {
+      margin-right: 20px; }
+  .post-meta .icon {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background: url(../img/icon-post-meta.svg) no-repeat;
+    vertical-align: -2px;
+    margin-right: 8px; }
+    .post-meta .icon-category {
+      background-position: right; }
+
+.post__body {
+  padding: 30px; }
+
+.more-link {
+  font-family: "nexa_heavyregular", "Helvetica Neue", Arial, sans-serif; }
+
+.content__side > *:not(:last-child) {
+  margin-bottom: 40px; }
+.content__side h3 {
+  margin-bottom: 5px; }
+.content__side ul {
+  list-style: none;
+  padding-left: 0; }
+  .content__side ul a {
+    color: #888;
+    text-decoration: none; }
+    .content__side ul a:hover {
+      color: #e22727;
+      text-decoration: underline; }
+.content__side li {
+  position: relative;
+  padding-left: 20px; }
+  .content__side li::before {
+    background: url(../img/list-item-dot.svg) no-repeat;
+    width: 10px;
+    height: 10px;
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 6px; }
 
 .partner {
   background: #ddd;
