--- a/dev/scss/inc/_global.scss
+++ b/dev/scss/inc/_global.scss
@@ -39,6 +39,24 @@ body {
 	color: $color;
 }
 
+a {
+  @include transition(all .1s);
+  color: $color-red;
+
+  &:hover {
+    color: lighten($color-red, 8);
+  }
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+// -------------------------------
+// typography
+// -------------------------------
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-family: $font-bold;
@@ -48,11 +66,5 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, dl, table {
   margin: 0 0 15px;
 }
 
-a {
-  @include transition(all .1s);
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
+h1 {font-size: 40px}
+h2 {font-size: 27px}
