--- a/dev/scss/inc/_grid.scss
+++ b/dev/scss/inc/_grid.scss
@@ -6,19 +6,19 @@ $column: 12;
 
 .container {
 	max-width: 1200px;
-	padding: 0 $margin;
+	padding: 0 15px;
 	margin: 0 auto;
 	position: relative;
 }
 
 .row {
-	margin: 0 -10px;
+	margin: 0 -15px;
 	@include clearfix;
 }
 
 [class^="grid"] {
 	float: left;
-	padding: 0 $margin;
+	padding: 0 15px;
 }
 
 .grid {width: 100%}
