--- a/dev/scss/inc/_header.scss
+++ b/dev/scss/inc/_header.scss
@@ -6,6 +6,9 @@
 	background: #fff;
 	padding: 15px 0;
 	@include clearfix;
+	// box-shadow: 0 1px 1px rgba(0,0,0,.1);
+	// position: relative;
+	// z-index: 1;
 }
 
 .header__logo {
