--- a/dev/scss/inc/_var.scss
+++ b/dev/scss/inc/_var.scss
@@ -7,6 +7,7 @@ $font-display: 'Black Ops One', cursive;
 // color
 $color: #4a4a4a;
 $color-darker: #2a2a2a;
+$color-lighter: #888;
 $color-red: #e22727;
 
 $color-footer-text: #888;
