--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -11,6 +11,7 @@
 @import "inc/_global";
 @import "inc/_grid";
 @import "inc/_layout";
+@import "inc/_form";
 
 // import scss partials
 @import "inc/_header";
