--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, dl, table {
   margin: 0 0 15px; }
 
 h1 {
-  font-size: 40px; }
+  font-size: 36px; }
 
 h2 {
   font-size: 27px; }
@@ -260,6 +260,18 @@ h2 {
 
 .page-title {
   color: #e22727; }
+
+.form-control {
+  background: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  padding: 10px;
+  width: 100%; }
+  .form-control:active, .form-control:focus {
+    /* Rectangle 327: */
+    border-color: #999;
+    outline: 0; }
 
 .header {
   background: #fff;
@@ -357,6 +369,23 @@ h2 {
 .more-link {
   font-family: "nexa_heavyregular", "Helvetica Neue", Arial, sans-serif; }
 
+.pagination {
+  text-align: center;
+  font-family: "nexa_heavyregular", "Helvetica Neue", Arial, sans-serif; }
+  .pagination > * {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 0 2px; }
+  .pagination a {
+    background: #e22727;
+    color: #fff;
+    text-decoration: none; }
+    .pagination a:hover {
+      background-color: #e74b4b; }
+  @media (max-width: 767px) {
+    .pagination {
+      margin-bottom: 60px; } }
+
 .content__side > *:not(:last-child) {
   margin-bottom: 40px; }
 .content__side h3 {
@@ -381,6 +410,28 @@ h2 {
     position: absolute;
     left: 0;
     top: 6px; }
+
+.form-search {
+  position: relative; }
+  .form-search .form-control {
+    padding-right: 40px; }
+  .form-search .btn-search {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    border: none;
+    background: none;
+    padding: 0 15px; }
+    .form-search .btn-search:hover path, .form-search .btn-search:focus path {
+      fill: #4a4a4a; }
+    .form-search .btn-search svg {
+      margin-top: 6px; }
+      .form-search .btn-search svg path {
+        fill: #888;
+        -webkit-transition: fill 0.1s linear;
+        -moz-transition: fill 0.1s linear;
+        transition: fill 0.1s linear; }
 
 .partner {
   background: #ddd;
