--- a/dev/scss/inc/_article.scss
+++ b/dev/scss/inc/_article.scss
@@ -60,3 +60,30 @@
 .more-link {
 	font-family: $font-bold;
 }
+
+
+// -------------------------------
+// PAGINATION
+// -------------------------------
+
+.pagination {
+	text-align: center;
+	font-family: $font-bold;
+
+	> * {
+		display: inline-block;
+		padding: 10px 20px;
+		margin: 0 2px;
+	}
+	a {
+		background: $color-red;
+		color: #fff;
+		text-decoration: none;
+		&:hover {
+			background-color: $color-red-lighten;
+		}
+	}
+	@media (max-width: $mobile-max) {
+		margin-bottom: 60px;
+	}
+}
