--- a/dev/scss/inc/_article.scss
+++ b/dev/scss/inc/_article.scss
@@ -1,5 +1,5 @@
 // -------------------------------
-// ARTICLE
+// ARTICLE - LOOP
 // -------------------------------
 
 .post {
@@ -55,6 +55,7 @@
 // Post Body
 .post__body {
 	padding: 30px;
+	@include clearfix;
 }
 
 .more-link {
@@ -85,5 +86,217 @@
 	}
 	@media (max-width: $mobile-max) {
 		margin-bottom: 60px;
+	}
+}
+
+
+// -------------------------------
+// ARTICLE - SINGLE
+// -------------------------------
+
+.section__page-title--single {
+	.page-title {
+		color: $color-darker;
+		margin: 30px 0 20px;
+	}
+
+	.post-meta {
+		margin-bottom: 10px;
+	}
+
+	@at-root .btn--latest-news {
+		padding: 5px 15px;
+		font-size: 14px;
+	}
+}
+
+.post__body {
+	ul {
+		@include list-item;
+	}
+}
+
+
+// blockquote
+blockquote {
+	background: #f3f3f3;
+	border-left: 3px solid $color-red;
+	padding: 20px;
+
+	> *:last-child {
+		margin-bottom: 0;
+	}
+}
+
+// -------------------------------
+// WP-CAPTIONS AND IMAGE
+// -------------------------------
+.wp-caption {
+	max-width: 100%;
+	padding-bottom: 8px;
+	margin-bottom: $margin;
+	position: relative;
+
+	&:after {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100px;
+		height: 2px;
+		content: '';
+		background: $color-red;
+	}
+
+	&-text {
+		font-size: 14px;
+		font-weight: 600;
+		margin-bottom: 0;
+		margin-top: 5px;
+	}
+
+	@at-root .alignleft {
+		float: left;
+		margin: 5px 30px $margin 0;
+	}
+
+	@at-root .alignright {
+		float: right;
+		margin: 5px 0 $margin 30px;
+	}
+
+	@at-root .aligncenter {
+		margin: 0 auto $margin;
+	}
+
+	@at-root img.aligncenter {
+		display: block;
+	}
+}
+
+@media (max-width: $mobile-max) {
+	[class*="align"] {
+		float: none;
+		display: block;
+		margin: 0 0 $margin;
+	}
+}
+
+
+// -------------------------------
+// COMMENTS
+// -------------------------------
+.comments {
+	ul {
+		list-style: none;
+		padding-left: 0;
+	}
+}
+
+// comment-list
+
+.comment-list {
+	margin-bottom: 60px;
+}
+
+.comment-author {
+	.avatar {
+		float: left;
+		width: 80px;
+		margin-right: 15px;
+		border: 4px solid #fff;
+		border-radius: 50%;
+		box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.10);
+	}
+
+	cite {
+		font-style: normal;
+		font-family: $font-bold;
+	}
+}
+
+.comment__body {
+	padding-left: 95px;
+}
+
+.comment-meta {
+	color: $color-lighter;
+	font-size: 14px;
+	margin-bottom: 10px;
+}
+
+.comment {
+	margin-bottom: 30px;
+	border-bottom: 1px dashed #ccc;
+	padding-bottom: 30px;
+
+	&.parent {
+		> .comment-block {
+			margin-bottom: 30px;
+		}
+	}
+
+	.children {
+		margin-bottom: 0;
+		padding-left: 95px;
+
+		li:last-child {
+			border-bottom: none;
+			margin-bottom: 0;
+			padding-bottom: 0;
+		}
+		// .comment-block {
+		// 	position: relative;
+
+		// 	&::before {
+		// 		content: '>';
+		// 		position: absolute;
+		// 		font-size: 40px;
+		// 		font-family: $font-bold;
+		// 		color: #ccc;
+		// 		@include transform(rotate(-90deg));
+		// 		left: -35px;
+		// 		top: -10px;
+		// 		line-height: 1;
+		// 	}
+		// }
+	}
+}
+
+// comment form
+.comment-respond {
+	@media (max-width: $mobile-max) {
+		margin-bottom: 60px;
+	}
+}
+.comment-form {
+	p {
+		label {
+			width: 100px;
+			display: block;
+			float: left;
+			margin-top: 10px;
+		}
+	}
+
+	.form-submit {
+		padding-left: 100px;
+	}
+
+	textarea {
+		@include calc(width, '100% - 100px')
+	}
+
+	.submit {
+		@include button($color-red, $color-red-lighten);
+	}
+}
+
+// -------------------------------
+// PAGE
+// -------------------------------
+.section__page-title--page {
+	.page-title {
+		color: $color-darker;
+		margin: 0 0 20px;
 	}
 }
