--- a/dev/scss/inc/_form.scss
+++ b/dev/scss/inc/_form.scss
@@ -2,18 +2,31 @@
 // FORM
 // -------------------------------
 
-.form-control {
-	background: #fff;
-	border: 1px solid #ccc;
-	box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.10);
-	border-radius: 3px;
-	padding: 10px;
-	width: 100%;
+input[type="text"], input[type="number"], input[type="email"], input[type="password"], textarea {
+	@include form-input;
+}
 
-	&:active, &:focus {
-		/* Rectangle 327: */
-		border-color: #999;
-		//box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.30);
-		outline: 0;
+textarea {
+	vertical-align: top;
+}
+
+.form-control {
+	width: 100%;
+}
+
+.btn {
+	@include button;
+
+	&-red {
+		background-color: $color-red;
+
+		&:hover {
+			background-color: $color-red-lighten;
+		}
 	}
+}
+
+input[type="button"], input[type="submit"], button {
+	@include button;
+	border: none;
 }
