--- a/dev/scss/inc/_layout.scss
+++ b/dev/scss/inc/_layout.scss
@@ -31,8 +31,8 @@
 
 .section__page-title {
 	background: #fff url(../img/section-page-title-bg.png) right top no-repeat;
-	background-size: 262px 260px;
-	padding: 20px 0 10px;
+	background-size: 322px auto;
+	padding: 30px 0 20px;
 
 	.page-title {
 		margin-bottom: 0;
