--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -17,8 +17,9 @@
 // import scss partials
 @import "inc/_header";
 @import "inc/_navigation";
-
 @import "inc/_article";
-
+@import "inc/_page";
 @import "inc/_sidebar";
 @import "inc/_footer";
+
+@import "inc/_misc";
