--- a/dev/scss/inc/_header.scss
+++ b/dev/scss/inc/_header.scss
@@ -11,7 +11,7 @@
 	// z-index: 1;
 }
 
-.header__logo {
+.header__logo a {
 	width: 180px;
 	height: 45px;
 	background: url(../img/pfc-logo.png) no-repeat;
