--- a/dev/scss/inc/_article.scss
+++ b/dev/scss/inc/_article.scss
@@ -2,7 +2,7 @@
 // ARTICLE - LOOP
 // -------------------------------
 
-.post {
+.hentry {
 	background: #fff;
 	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.10);
 	margin-bottom: 40px;
