--- a/dev/scss/inc/_mixin.scss
+++ b/dev/scss/inc/_mixin.scss
@@ -39,9 +39,11 @@
   font-family: $font-bold;
   padding: 10px 20px;
   display: inline-block;
+  box-shadow: 0 0 0 rgba(0,0,0,0);
 
   &:hover {
     background-color: $btn-color-hover;
     color: #fff;
+    box-shadow: 5px 5px 0 rgba(0,0,0,.2);
   }
 }
