theme update - about & 404

--- a/dev/scss/inc/_misc.scss
+++ b/dev/scss/inc/_misc.scss
@@ -1,5 +1,9 @@
 // -------------------------------
-// GRID
+// MISC
 // -------------------------------
 
+// Color
 .color-red {color: $color-red}
+
+// Alignment
+.text-center {text-align: center;}
