--- a/dev/scss/inc/_global.scss
+++ b/dev/scss/inc/_global.scss
@@ -71,9 +71,19 @@ h1, .h1 {font-size: 36px; line-height: 1.1}
 h2, .h2 {font-size: 27px; line-height: 1.2}
 h5, .h5 {font-size: 18px;}
 
+.font-display {font-family: $font-display;}
+
 strong, b, .lead {font-family: $font-bold}
 
-*:not(img) {
+.lead {
+  font-size: 18px;
+
+  @media (min-width: $tablet) {
+    font-size: 24px;
+  }
+}
+
+*:not(img, h2, h3, h4, h5, h6) {
   + h2, + h3, + h4, + h5, + h6 {
     margin-top: 45px;
   }
