theme update - gravity form - fitness training

--- a/dev/scss/inc/_article.scss
+++ b/dev/scss/inc/_article.scss
@@ -42,7 +42,7 @@
 		display: inline-block;
 		width: 16px;
 		height: 16px;
-		background: url(../img/icon-post-meta.svg) no-repeat;
+		background: url(../img/article-post-meta-icon.svg) no-repeat;
 		vertical-align: -2px;
 		margin-right: 8px;
 
