--- a/dev/scss/inc/_page.scss
+++ b/dev/scss/inc/_page.scss
@@ -18,6 +18,20 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: $color-darker-text;
+	position: relative;
+
+	&--deco {
+		&::before {
+			background: url(../img/page-header-bg-deco.png) top right no-repeat;
+			background-size: 400px auto;
+			width: 300px;
+			height: 300px;
+			position: absolute;
+			right: 0;
+			bottom: 0;
+			content: '';
+		}
+	}
 
 	.page-title {
 		font-family: $font-display;
@@ -45,10 +59,6 @@
 	background: #fff url(../img/section-page-title-bg.png) right top no-repeat;
 	background-size: 322px auto;
 	padding: 30px 0 20px;
-
-	.page-title {
-		margin-bottom: 0;
-	}
 }
 
 .page-title {
