--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -19,6 +19,7 @@
 @import "inc/_navigation";
 @import "inc/_article";
 @import "inc/_page";
+@import "inc/_posttype";
 @import "inc/_sidebar";
 @import "inc/_footer";
 
