theme update - home page

--- a/dev/scss/inc/_global.scss
+++ b/dev/scss/inc/_global.scss
@@ -33,7 +33,7 @@
 }
 
 body {
-	background: url(../img/bg.png) #f8f8f8;
+	background: url(../img/bg.png) #eee;
 	background-size: 100px 100px;
 	font: 16px/1.5 $font;
 	color: $color;
