--- a/dev/scss/inc/_global.scss
+++ b/dev/scss/inc/_global.scss
@@ -72,6 +72,7 @@ h2, .h2 {font-size: 27px; line-height: 1.2}
 h3, .h3 {font-size: 24px; line-height: 1.2}
 h4, .h4 {font-size: 21px;}
 h5, .h5 {font-size: 18px;}
+h6, .h6 {font-size: 16px;}
 
 .font-display {font-family: $font-display;}
 
