--- a/dev/scss/inc/_page.scss
+++ b/dev/scss/inc/_page.scss
@@ -54,6 +54,10 @@
 	&.no-padding {
 		padding: 0;
 	}
+
+	&--lg {
+		padding: 90px 0;
+	}
 }
 
 // Page title
@@ -142,6 +146,167 @@
 .section__home__shop {
 	background-color: #fff;
 }
+
+
+// testimonials
+.testimonials {
+	padding: 0 10%;
+
+	@media (min-width: $desktop) {
+		padding: 0 20%;
+	}
+}
+.testimonial {
+	overflow: hidden;
+	padding: 30px 0;
+
+	&__portrait {
+		width: 80px;
+		height: auto;
+		border-radius: 50%;
+		border: 4px solid #fff;
+		box-shadow: 0 1px 0 rgba(0,0,0,.1);
+		margin: 0 auto;
+
+		@media (min-width: $mobile) {
+			float: left;
+		}
+	}
+
+	&__content {
+		@media (min-width: $mobile) {
+			padding-left: 95px;
+			font-size: 18px;
+		}
+
+		@media (max-width: $mobile - 1px) {
+			text-align: center;
+			margin-top: 20px;
+		}
+	}
+
+	h6 {
+		margin-bottom: 0;
+		color: $color-red;
+	}
+
+	.testimonee__course {
+		font-size: 13px;
+		color: $color-lighter;
+		display: block;
+	}
+}
+
+.slick-arrow {
+	position: absolute;
+	top: 50%;
+	@include transform(translateY(-50%));
+	background: url(../img/slick-arrow.svg) no-repeat;
+	width: 32px;
+	height: 48px;
+	padding: 0;
+	text-indent: 100%;
+	overflow: hidden;
+
+	&:hover, &:focus {
+		background-color: transparent;
+		box-shadow: none;
+	}
+
+	.no-svg & {
+		background-image: url(../img/slick-arrow.png);
+	}
+
+	@media (max-width: $mobile - 1px) {
+		display: none !important;
+	}
+}
+
+.slick-next {
+	right: 0;
+	background-position: right;
+}
+
+.slick-prev {
+	left: 0;
+}
+
+.slick-dots {
+	list-style: none;
+	padding-left: 0;
+	text-align: center;
+
+	li {
+		display: inline-block;
+		padding: 0 5px;
+
+		&.slick-active {
+			button {
+				background-color: $color-red;
+			}
+		}
+	}
+
+	button {
+		width: 10px;
+		height: 10px;
+		overflow: hidden;
+		padding: 0;
+		border-radius: 50%;
+		text-indent: 100%;
+
+		&:hover, &:focus {
+			background-color: $color-lighter;
+			box-shadow: none;
+		}
+	}
+}
+
+
+// why
+.why {
+	list-style: none;
+	padding-left: 0;
+	overflow: hidden;
+	margin: 0 -$margin;
+	text-align: center;
+
+	h4 {
+		margin-bottom: 10px;
+		margin-top: 20px;
+	}
+
+	li {
+		margin-top: 45px;
+		padding: 0 $margin;
+
+		@media (min-width: $mobile) {
+			float: left;
+			width: 50%;
+
+		}
+
+		@media (min-width: $desktop) {
+			width: 25%;
+		}
+
+	}
+
+	&__icon {
+		display: block;
+		width: 68px;
+		height: 80px;
+		background: url(../img/home-why-icon.svg) no-repeat;
+		margin: 0 auto;
+
+		.no-svg & {
+			background-image: url(../img/home-why-icon.png);
+
+		}
+	}
+
+}
+
 
 // -------------------------------
 // PAGE - ABOUT
