theme update - homepage

--- a/dev/scss/inc/_navigation.scss
+++ b/dev/scss/inc/_navigation.scss
@@ -92,3 +92,16 @@
 		}
 	}
 }
+
+.home {
+	@media (min-width: $mobile-max) {
+		.nav a {
+			color: #fff;
+
+			&:hover {
+				color: $color-red;
+			}
+		}
+	}
+
+}
