--- a/dev/scss/inc/_header.scss
+++ b/dev/scss/inc/_header.scss
@@ -14,7 +14,28 @@
 .header__logo a {
 	width: 180px;
 	height: 45px;
-	background: url(../img/pfc-logo.png) no-repeat;
-	background-size: 100% auto;
+	background: url(../img/pfc-logo.png) center no-repeat;
+	background-size: 180px auto;
 	float: left;
+}
+
+.home {
+	@media (min-width: $mobile-max) {
+		.header {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			background-color: transparent;
+			z-index: 2;
+		}
+
+		.header__logo a {
+			background-color: #fff;
+			padding: 15px;
+			box-sizing: content-box;
+			margin-top: -15px;
+			margin-left: 8px;
+		}
+	}
 }
