--- a/dev/scss/inc/_page.scss
+++ b/dev/scss/inc/_page.scss
@@ -147,7 +147,7 @@
 		font-family: $font-display;
 		background-color: $color-red;
 		position: absolute;
-		top: 27.5%;
+		top: 24%;
 		left: 0;
 		padding: 3px 12px;
 		color: #fff;
@@ -370,7 +370,7 @@
 			margin: 0 auto;
 		}
 
-		&.category-group-training {
+		&.fitness_category-group-training {
 			i {
 				width: 124px;
 				background-position: right bottom;
