theme update - woocommerce

--- a/dev/scss/inc/_form.scss
+++ b/dev/scss/inc/_form.scss
@@ -2,12 +2,16 @@
 // FORM
 // -------------------------------
 
-input[type="text"], input[type="number"], input[type="email"], input[type="password"], textarea {
+input[type="text"], input[type="number"], input[type="email"], input[type="password"], input[type="tel"], textarea, select {
 	@include form-input;
 }
 
 textarea {
 	vertical-align: top;
+}
+
+select {
+	height: 44px;
 }
 
 .form-control {
