--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -23,5 +23,8 @@
 @import "inc/_sidebar";
 @import "inc/_footer";
 
+// woocommerce
+@import "inc/_woocommerce";
+
 @import "inc/_slick";
 @import "inc/_misc";
